sfdx-source/force-app/main/default/objects/Account/fields/Drive_WH_Nintex_ID__c.field-meta.xml
<CustomField>
    <fullName>Drive_WH_Nintex_ID__c</fullName>
    <description>LEM-9500: It stores the workflow instance for the Drive &apos;Withholding&apos; opt-out use case.</description>
    <label>Drive WH Nintex ID</label>
    <type>TextArea</type>
</CustomField>