sfdx-source/force-app/main/default/objects/Account/fields/Drive_WH_Nintex_URL__c.field-meta.xml
<CustomField>
    <fullName>Drive_WH_Nintex_URL__c</fullName>
    <description>LEM-9500: It stores the Nintex URL for the Drive &apos;Withholding&apos; opt-out use case.</description>
    <label>Drive WH Nintex URL</label>
    <type>Url</type>
</CustomField>