sfdx-source/force-app/main/default/objects/Account/fields/Duplicate_Status_Modified_At__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Status_Modified_At__c</fullName>
    <description>LEM-3673: To store the last modified date time of &apos;Duplicate Status&apos; field.</description>
    <label>Duplicate Status Modified At</label>
    <type>DateTime</type>
</CustomField>