sfdx-source/force-app/main/default/objects/Account/fields/Duplicate_Status_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Status_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-3673: To track the user who has updated the &apos;Duplicate Status&apos; field.</description>
    <label>Duplicate Status Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>