sfdx-source/force-app/main/default/objects/Account/fields/Enable_Merchant_Orders_Creation__c.field-meta.xml
<CustomField>
    <fullName>Enable_Merchant_Orders_Creation__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-22064: It indicates whether the Merchant Orders creation is enabled in the org. It enables Mx Order creation for SMB accounts and test accounts based on Mx Order Creation custom configuration flag.</description>
    <formula>IF(
  OR(
    $CustomMetadata.Static_Configurations__mdt.Tablet_Updates_By_Mx_Order.Configuration_Value__c == $Label.Boolean_Value_True_String,
    Is_Test__c,
    BEGINS(
      LOWER(Name),
      $Label.Test_Lower_Case_String
    )
  ),
  true,
  false
)</formula>
    <label>Enable Merchant Orders Creation</label>
    <type>Checkbox</type>
</CustomField>