sfdx-source/force-app/main/default/objects/Account/fields/Encrypted_Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Tax_Id__c</fullName>
    <description>LEM-2144: This field stores last four digit of tax id in salted hash encrypted format using crypto class.</description>
    <label>Encrypted Tax Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>