sfdx-source/force-app/main/default/objects/Account/fields/Exclusivity_Type__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13442: It indicates the type of exclusivity of the SMB Account has with DoorDash.</description>
    <inlineHelpText>Indicates the type of exclusivity the SMB Account has with DoorDash</inlineHelpText>
    <label>Exclusivity Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Partnership_Level__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractual</fullName>
            </value>
            <value>
                <fullName>Contractual - Partial</fullName>
            </value>
            <value>
                <fullName>De Facto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>