sfdx-source/force-app/main/default/objects/Account/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <description>LEM-6187</description>
    <label>Experience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DoorDash</fullName>
            </value>
            <value>
                <fullName>Caviar</fullName>
            </value>
            <value>
                <fullName>Storefront</fullName>
            </value>
            <value>
                <fullName>Drive</fullName>
            </value>
            <value>
                <fullName>Voice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>