sfdx-source/force-app/main/default/objects/Account/fields/External_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Business_Name__c</fullName>
    <description>LEM-2800: This field needs to be mapped to the ‘External Business Name’ field on the Drive - Form Franchise template.</description>
    <inlineHelpText>Mx name that will be used in API</inlineHelpText>
    <label>External Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>