sfdx-source/force-app/main/default/objects/Account/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-370: This field represents the fiscal year cycle of the business.</description>
    <inlineHelpText>Represents the fiscal year cycle of the business</inlineHelpText>
    <label>Fiscal Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jan - Dec</fullName>
            </value>
            <value>
                <fullName>Feb - Jan</fullName>
            </value>
            <value>
                <fullName>Mar - Feb</fullName>
            </value>
            <value>
                <fullName>Apr - Mar</fullName>
            </value>
            <value>
                <fullName>May - Apr</fullName>
            </value>
            <value>
                <fullName>May - Jun</fullName>
            </value>
            <value>
                <fullName>Jun - May</fullName>
            </value>
            <value>
                <fullName>Jul - Jun</fullName>
            </value>
            <value>
                <fullName>Aug - Jul</fullName>
            </value>
            <value>
                <fullName>Sept - Aug</fullName>
            </value>
            <value>
                <fullName>Oct - Sept</fullName>
            </value>
            <value>
                <fullName>Nov - Oct</fullName>
            </value>
            <value>
                <fullName>Dec - Nov</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>