sfdx-source/force-app/main/default/objects/Account/fields/Franchise_Name_With_Address__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Name_With_Address__c</fullName>
    <description>LEM-6845: It used to store business name with address</description>
    <formula>IF(ISBLANK(Legal_Business_Name__c), Name , Legal_Business_Name__c)  &amp; &quot;&quot; &amp; &quot;-&quot; &amp;  Account_Address__c</formula>
    <label>Franchise Name With Address</label>
    <complianceGroup>GDPR</complianceGroup>
    <type>Text</type>
</CustomField>