sfdx-source/force-app/main/default/objects/Account/fields/Franchise_Owned_Store_Count__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Owned_Store_Count__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>0</defaultValue>
    <description>LEM-363: The count of franchise owned stores for the business.</description>
    <inlineHelpText>The count of franchise owned stores for the business.</inlineHelpText>
    <label>Franchise Owned Store Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>