sfdx-source/force-app/main/default/objects/Account/fields/Franchise_Parent__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Parent__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-99: Describes the parent of a franchisee.</description>
    <label>Franchise Parent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Franchise Parents</relationshipLabel>
    <relationshipName>FranchiseParents</relationshipName>
    <type>Lookup</type>
</CustomField>