sfdx-source/force-app/main/default/objects/Account/fields/Franchised_Business__c.field-meta.xml
<CustomField>
    <fullName>Franchised_Business__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-17007: It indicates if the Mx is fully franchised, fully corporate, or both.</description>
    <inlineHelpText>Indicates if the Mx is fully franchised, fully corporate, or both</inlineHelpText>
    <label>Franchised Business?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Franchise</fullName>
            </value>
            <value>
                <fullName>Corporate + Franchise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>