sfdx-source/force-app/main/default/objects/Account/fields/Hours_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_Operation__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1048: Indicates the Mx store hours of operations.</description>
    <inlineHelpText>Signifies the Mx store hours of operations</inlineHelpText>
    <label>Hours of Operation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>