sfdx-source/force-app/main/default/objects/Account/fields/Inflation__c.field-meta.xml
<CustomField>
    <fullName>Inflation__c</fullName>
    <description>LEM-3215: Signifies the menu inflation rate for the Mx.</description>
    <label>Inflation</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>