sfdx-source/force-app/main/default/objects/Account/fields/Integration_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Integration_Go_Live__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Indicates the Integration Go-Live Date
BZAP-19603</description>
    <inlineHelpText>The Go-Live Date for POS Integrations cannot be less than 5 days from today. Please keep in mind that the POS team activates M-F, and dates that fall on the weekend will not be activated until the following Monday</inlineHelpText>
    <label>Integration Go-Live</label>
    <type>Date</type>
</CustomField>