sfdx-source/force-app/main/default/objects/Account/fields/Integration_Request__c.field-meta.xml
<CustomField>
    <fullName>Integration_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-8993: COO Same Store
On create event stamp the parent Integration request on the Store Account</description>
    <label>Integration Request</label>
    <referenceTo>Integration_Request__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>