sfdx-source/force-app/main/default/objects/Account/fields/Is_Additional_Store__c.field-meta.xml
<CustomField>
    <fullName>Is_Additional_Store__c</fullName>
    <description>LEM-18523: It is used to capture that store created for new store expansion. </description>
    <defaultValue>false</defaultValue>
    <label>Is Additional Store</label>
    <type>Checkbox</type>
</CustomField>