sfdx-source/force-app/main/default/objects/Account/fields/Is_Exempt_From_Chargebacks__c.field-meta.xml
<CustomField>
    <fullName>Is_Exempt_From_Chargebacks__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1048: Indicates if Mx can be incur chargebacks or is exempt.</description>
    <inlineHelpText>Signifies if Mx can be incur chargebacks or is exempt</inlineHelpText>
    <label>Is Exempt From Chargebacks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>