sfdx-source/force-app/main/default/objects/Account/fields/Is_Lead_Converted_To_Existing_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Lead_Converted_To_Existing_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-14727: It is created to identify whether lead is converted to existing account or new account.</description>
    <label>Is Lead Converted To Existing Account</label>
    <type>Checkbox</type>
</CustomField>