sfdx-source/force-app/main/default/objects/Account/fields/Is_MDS_Activated__c.field-meta.xml
<CustomField>
    <fullName>Is_MDS_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-5503: It is used to indicate if the Store Account has an activated Marketplace external reference.</description>
    <label>Is_MDS_Activated</label>
    <type>Checkbox</type>
</CustomField>