sfdx-source/force-app/main/default/objects/Account/fields/Is_Merged__c.field-meta.xml
<CustomField>
    <fullName>Is_Merged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-3673: Used to track the merged status of winning account.</description>
    <label>Is Merged</label>
    <type>Checkbox</type>
</CustomField>