sfdx-source/force-app/main/default/objects/Account/fields/Is_Parent_Account_Owner_Matching__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent_Account_Owner_Matching__c</fullName>
    <description>LEM-11918: Checks if the ownerId is same as Parent account&apos;s owner Id.</description>
    <formula>OwnerId  =  Parent.OwnerId</formula>
    <label>Is Parent Account Owner Matching</label>
    <type>Checkbox</type>
</CustomField>