sfdx-source/force-app/main/default/objects/Account/fields/Is_Test__c.field-meta.xml
<CustomField>
    <fullName>Is_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-4633: It indicates the store/business created is a test store/business to ease identification and deletion from the systems.</description>
    <label>Is Test</label>
    <type>Checkbox</type>
</CustomField>