sfdx-source/force-app/main/default/objects/Account/fields/Is_Xref_Present__c.field-meta.xml
<CustomField>
    <fullName>Is_Xref_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-14529: It is used to check if Xrefs are associated.</description>
    <label>Is Xref Present</label>
    <type>Checkbox</type>
</CustomField>