sfdx-source/force-app/main/default/objects/Account/fields/IsValidationRuleBypassedByFlow__c.field-meta.xml
<CustomField>
    <fullName>IsValidationRuleBypassedByFlow__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>LEM-24069: It is used to bypass the reparenting related validation rules triggered when store is reparented from &quot;Re-Parent Store Account&quot; flow.</description>
    <label>IsValidationRuleBypassedByFlow</label>
    <type>Checkbox</type>
</CustomField>