sfdx-source/force-app/main/default/objects/Account/fields/Item_Level_Tax_Categories_Rates__c.field-meta.xml
<CustomField>
    <fullName>Item_Level_Tax_Categories_Rates__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1048: Indicates the Item Category and corresponding Tax Rate for each Category, separated by a line.</description>
    <inlineHelpText>Please include the Item Category and corresponding Tax Rate for each Category, separated by a line. i.e.
Soda - 6.9%
Candy - 1.2%</inlineHelpText>
    <label>Item-Level Tax Categories + Rates</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>