sfdx-source/force-app/main/default/objects/Account/fields/Last_Coverage_Check_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Coverage_Check_Time__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1157: This represents the time when the last coverage check was run.</description>
    <inlineHelpText>Indicates when the store coverage check was last run</inlineHelpText>
    <label>Last Coverage Check Time</label>
    <type>DateTime</type>
</CustomField>