sfdx-source/force-app/main/default/objects/Account/fields/Last_Date_of_UPC_SKU_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_of_UPC_SKU_Update__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-540: Date of Last UPC / SKU Update</description>
    <inlineHelpText>Date of the CPG’s most recent UPC / SKU data update.</inlineHelpText>
    <label>Last Date of UPC / SKU Update</label>
    <type>Date</type>
</CustomField>