sfdx-source/force-app/main/default/objects/Account/fields/Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date__c</fullName>
    <description>LEM-7130</description>
    <inlineHelpText>Only applicable for new submarket launches/expansions.</inlineHelpText>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>