sfdx-source/force-app/main/default/objects/Account/fields/Lead_Required_Fields__c.field-meta.xml
<CustomField>
    <complianceGroup>GDPR</complianceGroup>
    <fullName>Lead_Required_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-14086: It checks that required fields on Lead is populated before conversion.</description>
    <label>Lead Required Fields</label>
    <type>Checkbox</type>
</CustomField>