sfdx-source/force-app/main/default/objects/Account/fields/Legal_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Business_Name__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-274: This field specifies the legal business name.</description>
    <inlineHelpText>Represents the legal business name</inlineHelpText>
    <label>Legal Business Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>