sfdx-source/force-app/main/default/objects/Account/fields/Managed_Status__c.field-meta.xml
<CustomField>
    <fullName>Managed_Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13442: It Indicates managed or unmanaged status of  the Account has with DoorDash.</description>
    <label>Managed Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IAM Managed</fullName>
            </value>
            <value>
                <fullName>OAM Managed</fullName>
            </value>
            <value>
                <fullName>Long-Tail Managed</fullName>
            </value>
            <value>
                <fullName>Long-Tail Covered</fullName>
            </value>
            <value>
                <fullName>Long-Tail Unassigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>