sfdx-source/force-app/main/default/objects/Account/fields/Managed_Unmanaged__c.field-meta.xml
<CustomField>
    <fullName>Managed_Unmanaged__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13442: It identifies the Lead management status.</description>
    <label>Managed/Unmanaged</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OAM Managed</fullName>
            </value>
            <value>
                <fullName>IAM Managed</fullName>
            </value>
            <value>
                <fullName>Unmanaged</fullName>
                <default>true</default>
                <label>Unmanaged</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>