sfdx-source/force-app/main/default/objects/Account/fields/Marketing_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Outreach__c</fullName>
    <description>LEM-14107: It is used to store the engagement preference for marketing outreach.</description>
    <complianceGroup>GDPR</complianceGroup>
    <label>Marketing Outreach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do Not Contact - Sensitive Relationship</fullName>
            </value>
            <value>
                <fullName>Vendor Can Directly Outreach</fullName>
            </value>
            <value>
                <fullName>Vendor Can Outreach - Inform SPM</fullName>
            </value>
            <value>
                <fullName>Vendor Do Not Outreach</fullName>
            </value>
            <value>
                <fullName>Can Contact Directly - Copy SMs</fullName>
            </value>
            <value>
                <fullName>Can Contact Directly</fullName>
            </value>
            <value>
                <fullName>Can Contact Directly - Notify SM Before Comms Go Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>