sfdx-source/force-app/main/default/objects/Account/fields/Marketplace_Nintex_Id__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Nintex_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-2364: This field represents the Marketplace Nintex Id to identify the stores created via Nintex.</description>
    <label>Marketplace Nintex Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>