sfdx-source/force-app/main/default/objects/Account/fields/MCC__c.field-meta.xml
<CustomField>
    <fullName>MCC__c</fullName>
    <description>LEM-14343: (Stripe KYC) this field maps verticals to Merchant Category Codes. The codes in this field are supported by and based on Stripe&apos;s documentation, which can be found here: https://docs.stripe.com/issuing/categories</description>
    <formula>TEXT(5812)</formula>
    <label>MCC</label>
    <type>Text</type>
</CustomField>