sfdx-source/force-app/main/default/objects/Account/fields/MDS_Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>MDS_Last_Synced__c</fullName>
    <description>Created this field to have a MDS Last synced date/time stamp for each and every field which we want to sync from MDS on Account object</description>
    <label>MDS Last Synced</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>