sfdx-source/force-app/main/default/objects/Account/fields/Medal_Rank__c.field-meta.xml
<CustomField>
    <fullName>Medal_Rank__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14099: It represents the Medal Rank of the Account.</description>
    <inlineHelpText>Indicates the medal rank of the account.</inlineHelpText>
    <label>Medal Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medal_Rank_Values</valueSetName>
    </valueSet>
</CustomField>