sfdx-source/force-app/main/default/objects/Account/fields/Media_Planning_Cycle_Start__c.field-meta.xml
<CustomField>
    <fullName>Media_Planning_Cycle_Start__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1608: This field represents the start month of the media planning cycle</description>
    <inlineHelpText>Signifies the start month of the customer’s media planning cycle</inlineHelpText>
    <label>Media Planning Cycle Start</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Months</valueSetName>
    </valueSet>
</CustomField>