sfdx-source/force-app/main/default/objects/Account/fields/Menu_Setup_Method__c.field-meta.xml
<CustomField>
    <fullName>Menu_Setup_Method__c</fullName>
    <description>LEM-658: Indicates the instructions to proceed with the menu creation.</description>
    <inlineHelpText>Indicates the instructions to proceed with the Menu creation</inlineHelpText>
    <label>Menu Setup Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create New Menu(s) using Menu Source</fullName>
            </value>
            <value>
                <fullName>Clone Existing Menu(s)</fullName>
            </value>
            <value>
                <fullName>Link to Existing Menu(s)</fullName>
            </value>
            <value>
                <fullName>None - Menu Setup Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>