sfdx-source/force-app/main/default/objects/Account/fields/Menu_UI_Type__c.field-meta.xml
<CustomField>
    <fullName>Menu_UI_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1241: Indicates whether Mx will be on restaurant or retail UI.</description>
    <label>Menu UI Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>