sfdx-source/force-app/main/default/objects/Account/fields/Menu_URL__c.field-meta.xml
<CustomField>
    <fullName>Menu_URL__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1048: Indicates the URL of the Mx&apos;s menu.
LEM-5380: Changed the data type to LongTextArea(1000 characters) for allowing the URL with length more than 255 characters through Nintex form submission.</description>
    <inlineHelpText>The URL of the Mx&apos;s menu</inlineHelpText>
    <label>Menu URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>