sfdx-source/force-app/main/default/objects/Account/fields/Merchant_Supplied_ID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Supplied_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-274: This field specifies the ID of the store given by the merchant.</description>
    <inlineHelpText>ID provided by the Merchant</inlineHelpText>
    <label>Merchant Supplied ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>