sfdx-source/force-app/main/default/objects/Account/fields/Merchant_Verticals__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Verticals__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-280 This multi select picklist defines the other verticals associated with a business account.</description>
    <inlineHelpText>All applicable verticals for the Mx</inlineHelpText>
    <label>Merchant Verticals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vertical</valueSetName>
    </valueSet>
</CustomField>