sfdx-source/force-app/main/default/objects/Account/fields/Minimum_Prep_Time__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Prep_Time__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1048: Indicates minimum prep time for order e.g., for new vertical flower shops.</description>
    <inlineHelpText>Signifies minimum prep time in minutes for order e.g., for new vertical flower shops</inlineHelpText>
    <label>Minimum Prep Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>