sfdx-source/force-app/main/default/objects/Account/fields/Moments_Occasions_Email_Comms__c.field-meta.xml
<CustomField>
    <fullName>Moments_Occasions_Email_Comms__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-17924: It displays the Mx preferences to receive email communications regarding Moments or Occasions.</description>
    <inlineHelpText>Displays the Mx preferences to receive email communications regarding Moments or Occasions</inlineHelpText>
    <label>Moments/Occasions Email Comms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt-In</fullName>
            </value>
            <value>
                <fullName>Opt-Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>