sfdx-source/force-app/main/default/objects/Account/fields/Most_Recent_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Activation_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-566: The most recent activation date of the store.</description>
    <inlineHelpText>Represents the most recent activation date of the store</inlineHelpText>
    <label>Most Recent Activation Date</label>
    <type>DateTime</type>
</CustomField>