sfdx-source/force-app/main/default/objects/Account/fields/Most_Recent_Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Deactivation_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-566: The most recent deactivation date of the store.</description>
    <inlineHelpText>Represents the most recent deactivation date of the store</inlineHelpText>
    <label>Most Recent Deactivation Date</label>
    <type>DateTime</type>
</CustomField>