sfdx-source/force-app/main/default/objects/Account/fields/Most_Recent_Nintex_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Nintex_Use_Case__c</fullName>
    <description>LEM-5630: It is used to display the most recent nintex use case from related opportunity created via nintex.</description>
    <label>Most Recent Nintex Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nintex_Use_Cases</valueSetName>
    </valueSet>
</CustomField>