sfdx-source/force-app/main/default/objects/Account/fields/Most_Recent_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Opportunity_ID__c</fullName>
    <description>LEM-5630: It is used to display the related most recent opportunity id created via nintex.</description>
    <label>Most Recent Opportunity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>